
unreleased v0.17.0
------------------
- Restructured dependency installation for wider compatibility:
    get_pip.py is now packaged with the plugin.
-Fixed unicode filename errors in thumbnail generation.

2017.10.16 v0.16.0
------------------
- Asset path redirection updates
    Better renderer-specific control on both asset pre-render scripting and job settings
    Fixed bug in thumbnail script where if the render fails and there's no outputs, no "thumbs" directory gets created which causes an output file upload error.
    Better Vray file redirection by adding env variable search path list. 
    Added back use of the pre-render MEL as the errors in this seem to be resolved in the latest releases.
    Better Arnold file redirection by stripping full path from aiImage node paths in pre-render MEL.
- Update pip install command to match new pypi.org format


2017.10.16 v0.15.1
------------------
- Added back pathlib dependency that was mistakenly removed.


2017.10.12 v0.15.0
------------------
- Updated dependencies azure-batch (4.0.0) and azure-batch-extensions (1.0.1)
- Better support for unicode
- Some fixes for render-specific asset detection:
    - Filter out empty path references
    - Correctly detect numbered volume cache data sets
    - Removed older Arnold 'dso' volume reference


2017-09-26 v0.14.0
------------------
- Support for Maya2017 Update4 and tentatively for Maya2018
- Fix for crash when "threads" option is missing from config .ini file
- Various test and .sln level fixes


2017-09-14 v0.13.0
------------------
- Fix incorrect dependency install type for concurrent.futures


2017-09-10 v0.12.0
------------------
- VRay Preview support in license picker for pools, Batch accounts will require whitelisting


2017-09-07 v0.11.0
------------------
- Support for V-ray for Maya
- Dependency on new Batch Extensions module
- Fixed asset file limitation


2017-07-05 v0.10.0
------------------
- Exposed low priority VM allocation for pools